# squabble-word-game

./: README.md  README.pypi.md  pyproject.toml
.github/workflows/: release.yml
game/: __init__.py  board.py  cli.py  exceptions.py  game_master.py  rulebook.py  tile_bag.py  types.py
game/players/: __init__.py  base.py  computer.py  human.py
game/ui/: __init__.py  board_renderer.py  panels.py  presenter.py  styles.py
tests/: conftest.py  test_human_player.py  test_rulebook.py
